<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/show_disabled"
        android:checkable="true"
        android:title="@string/show_disabled"
        app:showAsAction="never" />
    <item
        android:id="@+id/dynamic_colors"
        android:checkable="true"
        android:title="@string/dynamic_colors"
        app:showAsAction="never" />
    <item
        android:id="@+id/enable_monet"
        android:checkable="true"
        android:title="@string/enable_monet_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/enable_webview_debugging"
        android:checkable="true"
        android:title="@string/enable_webview_debugging"
        app:showAsAction="never" />
</menu>
